refactor: migrate POST /deploy to openapi
